syntax = "proto3";

package proto;
option go_package = '../proto';

service DagPool {
  rpc Add (AddReq) returns (AddReply) {}
  rpc Get (GetReq) returns (GetReply) {}
  rpc Remove (RemoveReq) returns (RemoveReply) {}
}
message PoolUser {
  string username = 1;
  string pass = 2;
}
message AddReq {
  bytes block = 1;
  PoolUser user =2;
}

message AddReply {
  string cid = 1;
}
message GetReq {
  string cid = 1;
  PoolUser user =2;
}

message GetReply {
  bytes block = 1;
}
message RemoveReq {
  string cid = 1;
  PoolUser user =2;
}

message RemoveReply {
  string message = 1;
}